Реализации кеша на SoftReference[1592#210853]